--- a/static/manifest.json
+++ b/static/manifest.json
@@ -6,7 +6,7 @@
   "orientation": "any",
   "scope": "/",
   "short_name": "McKenzie Map",
-  "start_url": "/mckenzie-map2.0",
+  "start_url": "https://kurtsley.github.io/mckenzie-map-2.0/",
   "theme_color": "#ffffff",
   "id": "mckenzie-map-pwa",
   "description": "Searchable map of McKenzie county ND",
