--- a/static/manifest.json
+++ b/static/manifest.json
@@ -4,9 +4,9 @@
   "display": "standalone",
   "name": "McKenzie Map 2.0",
   "orientation": "any",
-  "scope": "/",
+  "scope": "/mckenzie-map-2.0/",
   "short_name": "McKenzie Map",
-  "start_url": "https://kurtsley.github.io/mckenzie-map-2.0/",
+  "start_url": "/mckenzie-map-2.0/",
   "theme_color": "#ffffff",
   "id": "mckenzie-map-pwa",
   "description": "Searchable map of McKenzie county ND",
